--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -669,9 +669,9 @@ jobs:
         run: |
           terraform init \
             -backend-config="bucket=${{ env.TF_BUCKET }}" \
-            -backend-config="prefix=vector/${{ needs.plan.outputs.product }}-prod"
+            -backend-config="prefix=vector/${{ needs.deploy-dev.outputs.product }}-prod"
         working-directory: deploy/terraform
 
       - name: Terraform Apply (Prod)
-        run: terraform apply -auto-approve -var="image_tag=${{ needs.plan.outputs.image_tag }}" -var-file="../../products/${{ needs.deploy-dev.outputs.product }}/terraform.prod.tfvars"
+        run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.image_tag }}" -var-file="../../products/${{ needs.deploy-dev.outputs.product }}/terraform.prod.tfvars"
         working-directory: deploy/terraform
