--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -673,5 +673,5 @@ jobs:
         working-directory: deploy/terraform
 
       - name: Terraform Apply (Prod)
-        run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.image_tag }}" -var-file="../../products/${{ needs.deploy-dev.outputs.product }}/terraform.prod.tfvars"
+        run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.tag }}" -var-file="../../products/${{ needs.deploy-dev.outputs.product }}/terraform.prod.tfvars"
         working-directory: deploy/terraform
