--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -472,7 +472,7 @@ on:
 
 jobs:
   plan:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: read
       pull-requests: write
@@ -556,7 +556,7 @@ jobs:
 
   deploy-dev:
     needs: plan
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment:
       name: development
       url: https://your-dev-url-here # optional
@@ -637,7 +637,7 @@ jobs:
 
   deploy-prod:
     needs: deploy-dev
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment:
       name: production
 
